--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -9,6 +9,8 @@ app.version=0.1beta1
 app.ts=20110602
 #\u7cfb\u7edf\u8c03\u8bd5\u72b6\u6001
 app.debug=true
+#\u662f\u5426\u8ffd\u8e2a\u8fdc\u7a0b\u5ba2\u6237\u673a\u7684\u8ba1\u7b97\u673a\u540d\u79f0\u7b49\u8be6\u7ec6\u4fe1\u606f\uff08\u6709\u6027\u80fd\u95ee\u9898\uff09
+app.traceClientMachine=false
 
 #\u5217\u8868\u89c6\u56fe\u6bcf\u9875\u9ed8\u8ba4\u663e\u793a\u7684\u6761\u76ee\u6570
 app.pageSize=25
