--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -14,5 +14,5 @@ app.traceClientMachine=false
 
 #\u5217\u8868\u89c6\u56fe\u6bcf\u9875\u9ed8\u8ba4\u663e\u793a\u7684\u6761\u76ee\u6570
 app.pageSize=25
-#\u7cfb\u7edf\u8bbf\u95ee\u7684\u4e0a\u4e0b\u6587\u8def\u5f84
-app.root=/
+#\u9644\u4ef6\u6240\u4fdd\u5b58\u7684\u670d\u52a1\u5668\u8def\u5f84
+app.data.path=/bcdata
