--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -13,6 +13,8 @@ app.debug=true
 app.traceClientMachine=false
 
 #\u5217\u8868\u89c6\u56fe\u6bcf\u9875\u9ed8\u8ba4\u663e\u793a\u7684\u6761\u76ee\u6570
-app.pageSize=25
+app.grid.pageSize=25
+#\u5217\u8868\u89c6\u56fe\u9ed8\u8ba4\u662f\u5426\u8fdc\u7a0b\u6392\u5e8f
+app.grid.remoteSort=false
 #\u9644\u4ef6\u6240\u4fdd\u5b58\u7684\u670d\u52a1\u5668\u8def\u5f84
 app.data.path=/bcdata
