--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -18,3 +18,5 @@ app.grid.pageSize=25
 app.grid.remoteSort=false
 #\u9644\u4ef6\u6240\u4fdd\u5b58\u7684\u670d\u52a1\u5668\u8def\u5f84
 app.data.path=/bcdata
+#xheditor\u4e0a\u4f20\u7684\u6587\u4ef6\u6240\u4fdd\u5b58\u7684\u76f8\u5bf9\u4e8e\u5e94\u7528\u4e0b\u7684\u76f8\u5bf9\u8def\u5f84
+app.data.localUpload=uploads
