--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -1,17 +1,14 @@
-#\u7cfb\u7edf\u5168\u5c40\u8d44\u6e90\u914d\u7f6e "Simplified Chinese", Locale.CHINA, global_zh_CN.properties
-#author dragon (rongjihuang@gmail.com)
-#date 2011-04-01
-
+#\u7cfb\u7edf\u8c03\u8bd5\u72b6\u6001
+app.debug=${app.debug}
 #\u7cfb\u7edf\u6807\u9898
 app.title=bc\u5e73\u53f0\u6f14\u793a
 #\u7cfb\u7edf\u7248\u672c\u53f7
-app.version=0.2-SNAPSHOT
-app.ts=20110619
-#\u7cfb\u7edf\u8c03\u8bd5\u72b6\u6001
-app.debug=true
+app.version=${project.version}
+#\u7cfb\u7edf\u7f16\u8bd1\u53d1\u5e03\u7684\u65e5\u671f
+app.ts=${app.ts}
 #\u662f\u5426\u8ffd\u8e2a\u8fdc\u7a0b\u5ba2\u6237\u673a\u7684\u8ba1\u7b97\u673a\u540d\u79f0\u7b49\u8be6\u7ec6\u4fe1\u606f\uff08\u6709\u6027\u80fd\u95ee\u9898\uff09
 app.traceClientMachine=false
-
+#
 #\u5217\u8868\u89c6\u56fe\u6bcf\u9875\u9ed8\u8ba4\u663e\u793a\u7684\u6761\u76ee\u6570
 app.grid.pageSize=25
 #\u5217\u8868\u89c6\u56fe\u9ed8\u8ba4\u662f\u5426\u8fdc\u7a0b\u6392\u5e8f
