--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -17,3 +17,10 @@ app.grid.remoteSort=false
 app.data.path=/bcdata
 #xheditor\u4e0a\u4f20\u7684\u6587\u4ef6\u6240\u4fdd\u5b58\u7684\u76f8\u5bf9\u4e8e\u5e94\u7528\u4e0b\u7684\u76f8\u5bf9\u8def\u5f84
 app.data.localUpload=uploads
+#JODConverter\u6240\u4f7f\u7528\u7684openOfice\u670d\u52a1\u7684\u76d1\u542c\u7aef\u53e3\u548cip
+jodconverter.soffice.port=8100
+jodconverter.soffice.host=127.0.0.1
+#JODConverter\u6240\u8981\u8f6c\u6362\u7684\u6587\u6863\u7c7b\u578b\u5217\u8868(\u6587\u4ef6\u7684\u6269\u5c55\u540d)
+jodconverter.from.extensions=doc,docx,xls,xlsx,ppt,pptx
+#JODConverter\u6240\u8981\u8f6c\u6362\u4e3a\u7684\u6587\u6863\u7c7b\u578b(\u6587\u4ef6\u7684\u6269\u5c55\u540d)
+jodconverter.to.extension=pdf
