整合SWFUpload上传文件功能

--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -20,11 +20,11 @@ app.data.localUpload=uploads
 #
 ####\u4e0a\u4f20\u9644\u4ef6\u7684\u63a7\u5236####
 #\u6700\u5927\u4e0a\u4f20\u6570
-app.attachs.maxCount=3
-#\u6700\u5927\u5bb9\u91cf10MB
-app.attachs.maxSize=10485760
+app.attachs.maxCount=6
+#\u6700\u5927\u5bb9\u91cf1000MB
+app.attachs.maxSize=1048576000
 #\u5141\u8bb8\u4e0a\u4f20\u7684\u6269\u5c55\u540d
-app.attachs.extensions=pdf,txt,doc,xls,docx,xlsx,ppt,pptx,png,jpg,jpeg,gif,tif,tiff,mp3,mid,wma,mkv,avi,wmv
+app.attachs.extensions=bat,sh,reg,zip,rar,7z,gz,tar,pdf,txt,doc,xls,docx,xlsx,ppt,pptx,png,psd,jpg,jpeg,gif,tif,tiff,mp3,mid,wma,swf,avi,wmv,mkv
 #
 ####JODConverter####
 #JODConverter\u6240\u4f7f\u7528\u7684openOfice\u670d\u52a1\u7684\u76d1\u542c\u7aef\u53e3\u548cip
