--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	<parent>
 		<groupId>cn.bc</groupId>
 		<artifactId>bc-parent</artifactId>
-		<version>0.2-SNAPSHOT</version>
+		<version>0.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>bc-demo</artifactId>
-  	<version>0.2-SNAPSHOT</version>
+  	<version>0.3-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>bc平台演示</name>
 	
@@ -18,7 +18,7 @@
 		<struts2.jquery.version>2.5.3</struts2.jquery.version>
 		
 		<app.ts>20110623</app.ts>
-		<app.debug>true</app.debug>
+		<app.debug>false</app.debug>
 	</properties>
 
 	<build>
