--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -13,10 +13,10 @@ app.traceClientMachine=false
 app.grid.pageSize=25
 #\u5217\u8868\u89c6\u56fe\u9ed8\u8ba4\u662f\u5426\u8fdc\u7a0b\u6392\u5e8f
 app.grid.remoteSort=false
-#\u9644\u4ef6\u6240\u4fdd\u5b58\u7684\u670d\u52a1\u5668\u8def\u5f84
-app.data.path=/bcdata
-#xheditor\u4e0a\u4f20\u7684\u6587\u4ef6\u6240\u4fdd\u5b58\u7684\u76f8\u5bf9\u4e8e\u5e94\u7528\u4e0b\u7684\u76f8\u5bf9\u8def\u5f84
-app.data.localUpload=uploads
+#\u4e0a\u4f20\u6587\u4ef6\u5b58\u50a8\u7684\u7edd\u5bf9\u8def\u5f84\uff0c\u5f00\u5934\u5e26"/"\uff0c\u672b\u5c3e\u4e0d\u8981\u5e26"/"
+app.data.realPath=/bcdata
+#\u4e0a\u4f20\u6587\u4ef6\u5b58\u50a8\u7684\u76f8\u5bf9\u8def\u5f84\uff0c\u76f8\u5bf9\u4e8e\u5e94\u7528\u90e8\u7f72\u76ee\u5f55\u4e0b\u7684\u76f8\u5bf9\u8def\u5f84\uff0c\u5f00\u5934\u53ca\u672b\u5c3e\u4e0d\u8981\u5e26"/"
+app.data.subPath=uploads
 #
 ####\u4e0a\u4f20\u9644\u4ef6\u7684\u63a7\u5236####
 #\u6700\u5927\u4e0a\u4f20\u6570
