设置忽略src/main/webapp/bc目录

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 src/main/webapp/ui-libs
 src/main/webapp/ui-libs-demo
 src/main/webapp/uploads
+src/main/webapp/bc
 .metadata
 .settings
 .classpath
