--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,20 @@
 	<name>bc平台演示</name>
 	
 	<properties>
+		<app.ts>20110624</app.ts>
+		<app.debug>true</app.debug>
+		
+		<!-- 数据库连接配置 -->
+		<db>mysql</db>
+		<db.name>bcdemo</db.name>
+		<db.username>bcdemo</db.username>
+		<db.password>bcdemo</db.password>
+		<db.ip>localhost</db.ip>
+		<jndi.name>${db.name}</jndi.name>
 		<hibernate.show_sql>false</hibernate.show_sql>
 		<!-- 警示：update/create-drop/create/validate，如果在classpath中有/import.sql文件， 
 			hibernate3在启动时会执行 -->
 		<hibernate.hbm2ddl.auto>none</hibernate.hbm2ddl.auto>
-		<struts2.jquery.version>2.5.3</struts2.jquery.version>
-		
-		<app.ts>20110624</app.ts>
-		<app.debug>true</app.debug>
 	</properties>
 
 	<build>
