--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -8,6 +8,9 @@ app.version=${project.version}
 app.ts=${app.ts}
 #\u662f\u5426\u8ffd\u8e2a\u8fdc\u7a0b\u5ba2\u6237\u673a\u7684\u8ba1\u7b97\u673a\u540d\u79f0\u7b49\u8be6\u7ec6\u4fe1\u606f\uff08\u6709\u6027\u80fd\u95ee\u9898\uff09
 app.traceClientMachine=false
+#\u516c\u53f8\u7684\u76f8\u5173\u4fe1\u606f\u8bbf\u95ee\u5730\u5740
+app.company.url=https://github.com/rongjihuang/bc-demo
+app.company.copyright=Copyright \u00a92011 BC\u5f00\u53d1\u5e73\u53f0
 #
 #\u5217\u8868\u89c6\u56fe\u6bcf\u9875\u9ed8\u8ba4\u663e\u793a\u7684\u6761\u76ee\u6570
 app.grid.pageSize=25
