迁移bc-test到独立的仓库

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ src/main/webapp/ui-libs
 src/main/webapp/ui-libs-demo
 src/main/webapp/uploads
 src/main/webapp/bc
+src/main/webapp/bc-test
 .metadata
 .settings
 .classpath
