--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -1,7 +1,7 @@
 #\u7cfb\u7edf\u8c03\u8bd5\u72b6\u6001
 app.debug=${app.debug}
 #\u7cfb\u7edf\u6807\u9898
-app.title=bc\u5e73\u53f0\u6f14\u793a
+app.title=BC\u5e73\u53f0\u529f\u80fd\u6f14\u793a
 #\u7cfb\u7edf\u7248\u672c\u53f7
 app.version=${project.version}
 #\u7cfb\u7edf\u7f16\u8bd1\u53d1\u5e03\u7684\u65e5\u671f
@@ -10,16 +10,16 @@ app.ts=${app.ts}
 app.traceClientMachine=false
 #\u516c\u53f8\u7684\u76f8\u5173\u4fe1\u606f\u8bbf\u95ee\u5730\u5740
 app.company.url=https://github.com/rongjihuang/bc-demo
-app.company.copyright=Copyright \u00a92011 BC\u5f00\u53d1\u5e73\u53f0
+app.company.copyright=Copyright \u00a92011 BC\u5e73\u53f0\u5f00\u53d1\u56e2\u961f
 #
 #\u5217\u8868\u89c6\u56fe\u6bcf\u9875\u9ed8\u8ba4\u663e\u793a\u7684\u6761\u76ee\u6570
 app.grid.pageSize=25
 #\u5217\u8868\u89c6\u56fe\u9ed8\u8ba4\u662f\u5426\u8fdc\u7a0b\u6392\u5e8f
 app.grid.remoteSort=false
 #\u4e0a\u4f20\u6587\u4ef6\u5b58\u50a8\u7684\u7edd\u5bf9\u8def\u5f84\uff0c\u5f00\u5934\u5e26"/"\uff0c\u672b\u5c3e\u4e0d\u8981\u5e26"/"
-app.data.realPath=/bcdata4framework
+app.data.realPath=${app.data.realPath}
 #\u4e0a\u4f20\u6587\u4ef6\u5b58\u50a8\u7684\u76f8\u5bf9\u8def\u5f84\uff0c\u76f8\u5bf9\u4e8e\u5e94\u7528\u90e8\u7f72\u76ee\u5f55\u4e0b\u7684\u76f8\u5bf9\u8def\u5f84\uff0c\u5f00\u5934\u53ca\u672b\u5c3e\u4e0d\u8981\u5e26"/"
-app.data.subPath=uploads
+app.data.subPath=${app.data.subPath}
 #
 ####\u4e0a\u4f20\u9644\u4ef6\u7684\u63a7\u5236####
 #\u6700\u5927\u4e0a\u4f20\u6570
