--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	<parent>
 		<groupId>cn.bc</groupId>
 		<artifactId>bc-parent</artifactId>
-		<version>0.3-SNAPSHOT</version>
+		<version>0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>bc-demo</artifactId>
-  	<version>0.3-SNAPSHOT</version>
+  	<version>0.4-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>bc平台演示</name>
 	
@@ -23,7 +23,7 @@
 		<db.password>bcdemo</db.password>
 		<db.ip>localhost</db.ip>
 		<jndi.name>${db.name}</jndi.name>
-		<hibernate.show_sql>true</hibernate.show_sql>
+		<hibernate.show_sql>false</hibernate.show_sql>
 		<!-- 警示：update/create-drop/create/validate，如果在classpath中有/import.sql文件， 
 			hibernate3在启动时会执行 -->
 		<hibernate.hbm2ddl.auto>none</hibernate.hbm2ddl.auto>
