--- a/build.xml
+++ b/build.xml
@@ -33,16 +33,17 @@
 		<concatSql4drop db="mysql" />
 		
 		<!-- oracle -->
-		<concatSql4create db="oracle" />
-		<concatSql4drop db="oracle" />
+		<concatSql4create db="oracle" encoding="GBK"/>
+		<concatSql4drop db="oracle" encoding="GBK"/>
 	</target>
 
 	<!-- 合并各个模块中定义的sql建表脚本的宏 -->
 	<macrodef name="concatSql4create">
 		<!-- 数据库类型：如mysql,mssql,oracle -->
 		<attribute name="db" default="mysql"/>
+		<attribute name="encoding" default="${encoding}"/>
 		<sequential>
-			<concat destfile="${resources.dir}/db.@{db}.create.sql" encoding="${encoding}" fixlastline="${fixlastline}" force="${force}">
+			<concat destfile="${resources.dir}/db.@{db}.create.sql" encoding="@{encoding}" fixlastline="${fixlastline}" force="${force}">
 				<!-- 使用多个fileset的目的是控制合并的顺序 -->
 				<!-- 平台的 -->
 				<fileset dir="${frameworkSql.dir}">
@@ -56,8 +57,9 @@
 	<macrodef name="concatSql4drop">
 		<!-- 数据库类型：如mysql,mssql,oracle -->
 		<attribute name="db" default="mysql"/>
+		<attribute name="encoding" default="${encoding}"/>
 		<sequential>
-			<concat destfile="${resources.dir}/db.@{db}.drop.sql" encoding="${encoding}" fixlastline="${fixlastline}" force="${force}">
+			<concat destfile="${resources.dir}/db.@{db}.drop.sql" encoding="@{encoding}" fixlastline="${fixlastline}" force="${force}">
 				<!-- 使用多个fileset的目的是控制合并的顺序 -->
 				<!-- 平台的 -->
 				<fileset dir="${frameworkSql.dir}">
