--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	<parent>
 		<groupId>cn.bc</groupId>
 		<artifactId>bc-parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4</version>
 	</parent>
 	<artifactId>bc-demo</artifactId>
-  	<version>0.4-SNAPSHOT</version>
+  	<version>0.4</version>
 	<packaging>war</packaging>
 	<name>bc平台演示</name>
 	
