完成任务调度模块的功能整合

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
 			<artifactId>bc-feedback</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>cn.bc</groupId>
+			<artifactId>bc-scheduler</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		
 		<!-- for provided -->
 		<dependency>
