--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
 		</dependency>
 		<dependency>
 			<groupId>cn.bc</groupId>
+			<artifactId>bc-option</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.bc</groupId>
 			<artifactId>bc-bulletin</artifactId>
 			<version>${project.version}</version>
 		</dependency>
