超级管理员角色编码的资源值配置

--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -21,6 +21,10 @@ app.data.realPath=${app.data.realPath}
 #\u4e0a\u4f20\u6587\u4ef6\u5b58\u50a8\u7684\u76f8\u5bf9\u8def\u5f84\uff0c\u76f8\u5bf9\u4e8e\u5e94\u7528\u90e8\u7f72\u76ee\u5f55\u4e0b\u7684\u76f8\u5bf9\u8def\u5f84\uff0c\u5f00\u5934\u53ca\u672b\u5c3e\u4e0d\u8981\u5e26"/"
 app.data.subPath=${app.data.subPath}
 #
+####\u4e00\u4e9b\u89d2\u8272\u7684\u7f16\u7801###
+#\u8d85\u7ea7\u7ba1\u7406\u5458\u89d2\u8272
+key.role.admin=R_ADMIN
+#
 ####\u4e0a\u4f20\u9644\u4ef6\u7684\u63a7\u5236####
 #\u6700\u5927\u4e0a\u4f20\u6570
 app.attachs.maxCount=6
