--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -12,7 +12,7 @@ app.org.matrix=false
 app.traceClientMachine=false
 #\u516c\u53f8\u7684\u76f8\u5173\u4fe1\u606f\u8bbf\u95ee\u5730\u5740
 app.company.url=https://github.com/rongjihuang/bc-demo
-app.company.copyright=Copyright \u00a92011 BC\u5e73\u53f0\u5f00\u53d1\u56e2\u961f
+app.company.copyright=Copyright \u00a92011 BC\u5e73\u53f0
 #
 #\u5217\u8868\u89c6\u56fe\u6bcf\u9875\u9ed8\u8ba4\u663e\u793a\u7684\u6761\u76ee\u6570
 app.grid.pageSize=25
@@ -22,10 +22,6 @@ app.grid.remoteSort=false
 app.data.realPath=${app.data.realPath}
 #\u4e0a\u4f20\u6587\u4ef6\u5b58\u50a8\u7684\u76f8\u5bf9\u8def\u5f84\uff0c\u76f8\u5bf9\u4e8e\u5e94\u7528\u90e8\u7f72\u76ee\u5f55\u4e0b\u7684\u76f8\u5bf9\u8def\u5f84\uff0c\u5f00\u5934\u53ca\u672b\u5c3e\u4e0d\u8981\u5e26"/"
 app.data.subPath=${app.data.subPath}
-#
-####\u4e00\u4e9b\u89d2\u8272\u7684\u7f16\u7801###
-#\u8d85\u7ea7\u7ba1\u7406\u5458\u89d2\u8272
-key.role.admin=R_ADMIN
 #
 ####\u4e0a\u4f20\u9644\u4ef6\u7684\u63a7\u5236####
 #\u6700\u5927\u4e0a\u4f20\u6570
@@ -44,3 +40,20 @@ jodconverter.soffice.host=127.0.0.1
 jodconverter.from.extensions=doc,docx,xls,xlsx,ppt,pptx
 #JODConverter\u6240\u8981\u8f6c\u6362\u4e3a\u7684\u6587\u6863\u7c7b\u578b(\u6587\u4ef6\u7684\u6269\u5c55\u540d)
 jodconverter.to.extension=pdf
+#\u684c\u9762
+shortcut.title.drag2recyle=\u8981\u5220\u9664\u684c\u9762\u56fe\u6807\uff0c\u5c06\u5176\u62d6\u653e\u5230\u8fd9\u91cc\u5373\u53ef\u3002
+####\u4e00\u4e9b\u89d2\u8272\u7684\u7f16\u7801###
+#\u5e73\u53f0\uff1a\u901a\u7528\u89d2\u8272
+key.role.bc.common=BC_COMMON
+#\u5e73\u53f0\uff1a\u8d85\u7ea7\u7ba1\u7406\u5458\u89d2\u8272
+key.role.bc.admin=BC_ADMIN
+#\u5e73\u53f0\uff1a\u9009\u9879\u7ba1\u7406\u89d2\u8272
+key.role.bc.option=BC_OPTION
+#\u5e73\u53f0\uff1a\u7535\u5b50\u516c\u544a\u7ba1\u7406\u89d2\u8272
+key.role.bc.bulletin=BC_BULLETIN
+#\u5e73\u53f0\uff1a\u7cfb\u7edf\u53cd\u9988\u7ba1\u7406\u89d2\u8272
+key.role.bc.feedback=BC_FEEDBACK
+#\u5e73\u53f0\uff1a\u9644\u4ef6\u7ba1\u7406\u89d2\u8272
+key.role.bc.attach=BC_ATTACH
+#
+####\u9879\u76ee\u7279\u6b8a\u7684\u5176\u4ed6\u914d\u7f6e####
