性能优化及数据库脚本整理

--- a/build.xml
+++ b/build.xml
@@ -88,6 +88,9 @@
 				<fileset dir="${frameworkSql.dir}">
 					<include name="framework.db.@{db}.create.sql" />
 				</fileset>
+				<fileset dir="${frameworkSql.dir}">
+					<include name="framework.db.@{db}.create.fn.sql" />
+				</fileset>
 
 				<!-- activiti -->
 				<fileset dir="${workflowSql.dir}">
