添加组织架构管理角色

--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -47,6 +47,8 @@ shortcut.title.drag2recyle=\u8981\u5220\u9664\u684c\u9762\u56fe\u6807\uff0c\u5c0
 key.role.bc.common=BC_COMMON
 #\u5e73\u53f0\uff1a\u8d85\u7ea7\u7ba1\u7406\u5458\u89d2\u8272
 key.role.bc.admin=BC_ADMIN
+#\u5e73\u53f0\uff1a\u7ec4\u7ec7\u67b6\u6784\u7ba1\u7406\u89d2\u8272
+key.role.bc.actor=BC_ORGANIZE
 #\u5e73\u53f0\uff1a\u9009\u9879\u7ba1\u7406\u89d2\u8272
 key.role.bc.option=BC_OPTION
 #\u5e73\u53f0\uff1a\u7535\u5b50\u516c\u544a\u7ba1\u7406\u89d2\u8272
