--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -29,7 +29,7 @@ app.attachs.maxCount=6
 #\u6700\u5927\u5bb9\u91cf1000MB
 app.attachs.maxSize=1048576000
 #\u5141\u8bb8\u4e0a\u4f20\u7684\u6269\u5c55\u540d
-app.attachs.extensions=bat,sh,reg,zip,rar,7z,gz,tar,pdf,txt,doc,xls,docx,xlsx,ppt,pptx,png,psd,jpg,jpeg,gif,tif,tiff,mp3,mid,wma,swf,avi,wmv,mkv
+app.attachs.extensions=bat,sh,reg,zip,rar,7z,gz,tar,pdf,txt,doc,xls,docx,xlsx,ppt,pptx,png,psd,jpg,jpeg,gif,tif,tiff,mp3,mid,wma,swf,avi,wmv,mkv,apk
 app.attachs.images=jpg,jpeg,gif,png
 #
 ####JODConverter####
