--- a/pom.xml
+++ b/pom.xml
@@ -133,11 +133,13 @@
 			<artifactId>bc-scheduler</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<!-- WebSocket -->
 		<dependency>
 			<groupId>cn.bc</groupId>
 			<artifactId>bc-websocket</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<!-- 在线聊天工具 -->
 		<dependency>
 			<groupId>cn.bc</groupId>
 			<artifactId>bc-chat</artifactId>
