--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="BCDEMO" version="2.4"
-	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app id="BCDEMO" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<!-- 文档按如下顺序布局可以保证在weblogic8下启动时不会报web.xml不规范的错误： display-name>description>context-param>filter>filter-mapping>listener>servlet 
 		>servlet-mapping>session-config>welcome-file-list>error-page>taglib -->
@@ -30,16 +30,12 @@
 	<servlet>
 		<servlet-name>uploadFileServlet</servlet-name>
 		<servlet-class>cn.bc.docs.web.UploadFileServlet</servlet-class>
-		<!-- 上传文件存储的相对路径，相对于应用部署目录下的相对路径，开头及末尾不要带"/"
-			* 务必与global.properties中app.data.subPath的值配置相同
-		-->
+		<!-- 上传文件存储的相对路径，相对于应用部署目录下的相对路径，开头及末尾不要带"/" * 务必与global.properties中app.data.subPath的值配置相同 -->
 		<init-param>
 			<param-name>appSubDir</param-name>
 			<param-value>uploads</param-value>
 		</init-param>
-		<!-- 上传文件存储的绝对路径，开头带"/"，末尾不要带"/"，通过请求参数a=1启用
-			* 务必与global.properties中app.data.realPath的值配置相同
-		-->
+		<!-- 上传文件存储的绝对路径，开头带"/"，末尾不要带"/"，通过请求参数a=1启用 * 务必与global.properties中app.data.realPath的值配置相同 -->
 		<init-param>
 			<param-name>appRealDir</param-name>
 			<param-value>/bcdata4demo</param-value>
@@ -60,7 +56,7 @@
 		<servlet-name>uploadFileServlet</servlet-name>
 		<url-pattern>/upload/*</url-pattern>
 	</servlet-mapping>
-	
+
 	<!-- Jetty WebSocket -->
 	<servlet>
 		<servlet-name>WSChat</servlet-name>
@@ -204,7 +200,12 @@
 		<filter-name>gzipFilter</filter-name>
 		<url-pattern>*.html</url-pattern>
 	</filter-mapping>
-	<!-- <filter-mapping> <filter-name>gzipFilter</filter-name> <url-pattern>*.jsp</url-pattern> 
-		</filter-mapping> <filter-mapping> <filter-name>gzipFilter</filter-name> 
-		<servlet-name>OzActionServlet</servlet-name> </filter-mapping> -->
+
+	<!-- 使用连接池配置 -->
+	<resource-ref>
+		<description>bc-demo DataSource Reference</description>
+		<res-ref-name>jdbc/bcdemo</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
