--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-src/main/webapp/ui-libs
-src/main/webapp/ui-libs-demo
 src/main/webapp/uploads
-src/main/webapp/bc
-src/main/webapp/bc-test
 .metadata
 .settings
 .classpath
@@ -14,3 +10,8 @@ Thumbs.db
 build
 bin
 temp
+update-*.bat
+.DS_Store
+.idea
+*.iml
+.externalToolBuilders
