--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
 	<parent>
 		<groupId>cn.bc</groupId>
 		<artifactId>bc-parent</artifactId>
-		<version>0.7-SNAPSHOT</version>
+		<version>3.2-SNAPSHOT</version>
+		<relativePath/>
 	</parent>
 	<artifactId>bc-demo</artifactId>
 	<packaging>war</packaging>
